support useRcBlock for /blocks/head/header
